# flowrun

./: README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/flowrun/: __init__.py  context.py  dag.py  engine.py  executor.py  hooks.py  scheduler.py  serialization.py  sqlite_store.py  state.py  task.py
tests/: conftest.py  test_dag_builder.py  test_hooks.py  test_logging.py  test_new_features.py  test_partial_dag.py  test_registry.py  test_run_context.py  test_scheduler.py  test_sqlite_store.py  test_state_transitions.py  test_task_decorator.py  test_task_executor.py
